# nova-os-sdk

./: .gitignore  .goreleaser.yaml  LICENSE  Makefile  README.md
python/: CHANGELOG.md  README.md  openapi-python-client.toml  openapi-python-client.yaml  pyproject.toml
python/examples/: 00_quickstart.py  01_basic_chat.py  01b_claude_agent_sdk_drop_in.py  02_create_employee_and_agent.py  03_upload_knowledge.py  04_custom_tool_inline.py  05_custom_tool_webhook.py  06_multi_model_fallback.py  07_bundle_export_import.py  08_async_job_long_running.py  09_streaming_messages.py  10_idempotency.py  11_pagination.py  12_documents_upload.py  13_hooks_subscribe.py  14_filesystem_seed.py  15_users_settings_admin.py  16_sessions_explicit.py  17_personas_discovery.py  README.md
python/nova_os/: __init__.py  _sync.py  _version.py  anthropic_compat.py  callbacks.py  client.py  errors.py  streaming.py
python/nova_os/integrations/: aws_lambda.py  fastapi.py  flask.py
python/nova_os/resources/: _base.py  agents.py  documents.py  employees.py  filesystem.py  hooks.py  jobs.py  knowledge.py  messages.py  personas.py  sessions.py  settings.py  (+1 more)
python/tests/: test_agents_resource.py  test_anthropic_compat.py  test_anthropic_sdk_roundtrip.py  test_aws_lambda_integration.py  test_client.py  test_employees_resource.py  test_errors.py  test_fastapi_integration.py  test_flask_integration.py  test_idempotency.py  test_jobs_resource.py  test_messages_resource.py  test_new_resources.py  test_retry.py  test_smoke.py  test_sse.py  test_streaming.py  test_sync_proxy.py  test_webhook_router.py
(+119 files in other folders)
