[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nova-os-sdk"
version = "0.1.0a1"
description = "Partner SDK for Nova OS — Anthropic Managed Agents compatible with multi-model + employee enhancements"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Nova OS Team", email = "engineering@meganova.ai" }]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "anyio>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "openapi-python-client>=0.21",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["nova_os*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
